# take-note

./: .gitignore  CHANGELOG.md  FEATURES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: PLAN.MD
sticky_notes/: __main__.py  app.py  board_window.py  hotkey.py  models.py  note_window.py  storage.py  tray.py
take_note/: __main__.py  app.py  autostart.py  board_window.py  hotkey.py  list_markers.py  models.py  note_window.py  notes_browser.py  notes_manager.py  reminders.py  settings_dialog.py  spellcheck.py  storage.py  tray.py  widgets.py  window_watch.py  x11_wm.py
test_cases/: test_cases_v1.md  test_cases_v10.md  test_cases_v11.md  test_cases_v12.md  test_cases_v13.md  test_cases_v14.md  test_cases_v15.md  test_cases_v2.md  test_cases_v3.md  test_cases_v4.md  test_cases_v5.md  test_cases_v6.md  test_cases_v7.md  test_cases_v8.md  test_cases_v9.md
tests/: conftest.py  test_app.py  test_autostart.py  test_board_window.py  test_hotkey.py  test_list_markers.py  test_models.py  test_note_window.py  test_notes_browser.py  test_notes_manager.py  test_reminders.py  test_settings_dialog.py  test_spellcheck.py  test_storage.py  test_tray.py  test_x11_wm.py
