[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "take-note"
version = "0.1.0"
description = "Take Note! - a sticky notes app for Linux"
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "python-xlib",
]

[project.optional-dependencies]
spellcheck = ["pyenchant"]

[project.scripts]
take-note = "take_note.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["take_note"]

[dependency-groups]
dev = [
    "pytest",
]
