[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "take-note"
version = "1.2.0"
description = "A sticky notes app for Linux (Python + PySide6/Qt6) — rich text, tags, notepads, and a searchable Notes Manager."
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "python-xlib",
]

[project.optional-dependencies]
spellcheck = ["pyenchant"]

[project.scripts]
take-note = "take_note.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["take_note"]

[dependency-groups]
dev = [
    "pytest",
]
